--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "excel4node": "^1.8.2",
     "firebase": "^10.12.4",
@@ -21,10 +22,13 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "redux": "^5.0.1",
+    "remark-gfm": "^4.0.0",
     "remixicon": "^4.3.0",
     "tailwindcss": "^3.4.5"
   },
