--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "excel4node": "^1.8.2",
     "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.1",
     "framer-motion": "^11.3.21",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
