--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,23 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "skipLibCheck": true,
+    "target": "ES2020",
     "module": "ESNext",
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "types": ["jest", "@testing-library/jest-dom"]
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "src",
+    "src/setupTests.ts",
+    "src/store/store.tsx",
+    "src/typings/excelnode.d.ts",
+    "src/typings/xlsx-populate.d.ts",
+    "src/__tests__/HospitalDetails.test.tsx",
+    "src/__tests__/HospitalInfo.test.tsx"
+  ]
 }
