--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "jsx": "react-jsx",
+    "jsx": "react",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "bundler",
@@ -19,5 +19,6 @@
     "src/typings/xlsx-populate.d.ts",
     "src/__tests__/HospitalDetails.test.tsx",
     "src/__tests__/HospitalInfo.test.tsx"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
