--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,20 +2,20 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES6",
+    "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "CommonJS",
+    "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     
 
     /* Linting */
@@ -24,7 +24,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+     "allowSyntheticDefaultImports": true,
     "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": [
@@ -34,7 +34,6 @@
     "src/typings/excelnode.d.ts",
     "src/typings/xlsx-populate.d.ts",
     "src/__tests__/HospitalDetails.test.tsx",
-    "src/__tests__/HospitalInfo.test.tsx",
-  ],
-  "exclude": ["node_modules"]
+    "src/__tests__/HospitalInfo.test.tsx", // Add this line to include your test files
+  ]
 }
